docs: comment Java 21 use 'List#getFirst()' instead of 'get(0)'